# zst_agent

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: react_agent.py
agent/mcp/: multi_mcp.py
agent/tools/: agent_tools.py  middleware.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: admin.py  auth.py  chat.py  dashboard.py  knowledge.py  router.py  user.py
app/core/: agent_manager.py  config.py  database.py  security.py
app/models/: __init__.py  chat.py  user.py
app/schemas/: __init__.py  auth.py  chat.py  response.py
app/services/: __init__.py  auth_service.py  chat_service.py  user_service.py
config/: chroma.yml  prompts.yml
frontend/: index.html  package-lock.json  package.json  uno.config.ts  vite.config.ts  vite.config.ts.timestamp-1782619291437-9c30413e4fe99.mjs
frontend/src/: components.d.ts  main.ts
frontend/src/api/: admin.ts  auth.ts  chat.ts  dashboard.ts  index.ts  knowledge.ts  user.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/auth/: LoginPage.vue  RegisterPage.vue
frontend/src/pages/chat/: ChatPage.vue
frontend/src/pages/dashboard/: DashboardPage.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  chat.ts  index.ts  theme.ts  user.ts
frontend/src/styles/: index.scss
frontend/src/types/: api.d.ts  auth.d.ts  chat.d.ts
model/: factory.py
prompts/: chat_prompt.txt  main_prompt.txt
rag/: hybrid_retrieval.py  rag_service.py  vector_store.py
scripts/: init_db.sql
utils/: config_handler.py  file_handler.py  logger_handler.py  prompt_loader.py
(+4 files in other folders)
