[project]
name = "zst-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aerich>=0.7.0",
    "bcrypt==4.0.1",
    "chromadb>=0.4.0",
    "dashscope>=1.14.0",
    "email-validator>=2.0.0",
    "fastapi>=0.100.0",
    "httpx>=0.25.0",
    "jieba>=0.42.1",
    "langchain>=0.1.0",
    "langchain-chroma>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-text-splitters>=0.0.1",
    "langgraph>=0.0.20",
    "mcp>=0.9.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "tortoise-orm[asyncmy]>=0.20.0",
    "uvicorn[standard]>=0.23.0",
]
